ecmascript/parser/tests/test262-error-references/fail/88f3d521fae776b9.js.stderr
error: Rest element must be final element
 --> $DIR/tests/test262-parser/fail/88f3d521fae776b9.js:1:2
  |
1 | [...0,...{a=0}]=0
  |  ^^^^

